## Copyright (C) 2022-2026 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.


#
# mu contains some 'vendored' dependencies under thirdparty/; those
# are only used if the corresponding system package is not found
# (if such exists). But, we can override:

option('use-embedded-fmt',
       type: 'boolean',
       value: false,
       description: 'Use the embedded fmt, even if system package is found')

option('use-embedded-cli11',
       type: 'boolean',
       value: false,
       description: 'Use the embedded CLI11, even if system package is found')

#
# language detection
#

option('cld2',
       type : 'feature',
       value: 'auto',
       description: 'Add support for language-detection through cld2')

#
# emacs
#

option('emacs',
       type: 'string',
       value: 'emacs',
       description: 'name/path of the emacs executable (for byte-compilation)')

option('lispdir',
       type: 'string',
       description: 'path under which to install emacs-lisp files')


#
# scm & guile (both use GNU Guile)
#
option('scm',
       type : 'feature',
       value: 'auto',
       description: 'build the guile scripting support (requires guile-3.x)')


# old-style guile has been deprecated for years, and is now
# disabled by default. It will be removed in some future release.
option('guile',
       type : 'feature',
       value: 'disabled',
       deprecated: true,
       description: 'build the guile scripting support (requires guile-3.x)')

# by default, this uses guile_dep.get_variable(pkgconfig: 'extensiondir')
option('guile-extension-dir',
       type: 'string',
       description: 'custom install path for the guile extension module')

#
# misc
#

option('tests',
       type : 'feature',
       value: 'auto',
       description: 'build unit tests')

option('readline',
       type: 'feature',
       value: 'auto',
       description: 'enable readline support for the mu4e repl')
