## Copyright (C) 2022-2024 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.


option('cld2',
       type : 'feature',
       value: 'auto',
       description: 'Add support for language-detection through cld2')

#
# emacs
#

option('emacs',
       type: 'string',
       value: 'emacs',
       description: 'name/path of the emacs executable (for byte-compilation)')

option('lispdir',
       type: 'string',
       description: 'path under which to install emacs-lisp files')


#
# guile
#

option('guile',
       type : 'feature',
       value: 'auto',
       description: 'build the guile scripting support (requires guile-3.x)')

# by default, this uses guile_dep.get_variable(pkgconfig: 'extensiondir')
option('guile-extension-dir',
       type: 'string',
       description: 'custom install path for the guile extension module')

#
# misc
#

option('tests',
       type : 'feature',
       value: 'auto',
       description: 'build unit tests')

option('readline',
       type: 'feature',
       value: 'auto',
       description: 'enable readline support for the mu4e repl')
